# vendors

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/atomic models/: vendor.hpp
include/atomic_models/: customerGenerator.hpp  vendor.hpp
include/coupled models/: HelicopterCoupledModel.hpp  top_model.hpp
include/coupled_models/: VCCoupledModel.hpp  top_model.hpp
logs_to_TPTP/: VendorsAxioms.p  logs2TPTP.py  state_transition.py
visualize/: simViewer.py
visualize/.spyproject/config/backups/: workspace.ini.bak
